# pokerrs

./: .gitignore  Cargo.toml  LICENSE  README.md  downloader
benches/: bot.rs
src/: auth.rs  bitcard.rs  bot.rs  bot_always_call.rs  bot_easy.rs  bot_medium.rs  card.rs  cmdline.rs  comb.rs  export_ts.rs  fold_channel.rs  frozen.rs  game.rs  gamestate.rs  hand.rs  http_client.rs  id_counter.rs  lib.rs  owning_broadcast.rs  server.rs  special_card.rs  state_iter.rs  static_config.rs  static_files.rs  table.rs  template.rs  verified_deck.rs  viewstate.rs
ts/: .gitignore  client.ts
ts/static/: index.html  styles.css
ts/static/card_images/: downloader
